--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,7 @@ h6 {
   padding: 10px 0 10px 22px;
 }
 
-/* .navbar a,
+.navbar a,
 .navbar a:focus {
   display: flex;
   align-items: center;
@@ -243,10 +243,12 @@ h6 {
   font-size: 14px;
   color: #fff;
   white-space: nowrap;
+   font-weight: 500;
+  text-transform: uppercase;
   transition: 0.3s;
-} */
+}
 
-.navbar a,
+/* .navbar a,
 .navbar a:focus {
   display: flex;
   align-items: center;
@@ -260,7 +262,7 @@ h6 {
   transition: 0.3s;
   text-transform: uppercase;
   position: relative;
-}
+} */
 
 
 .navbar a i,
